--- a/TeoriaBEM/styles.css
+++ b/TeoriaBEM/styles.css
@@ -6,5 +6,47 @@ Se usa siempre CLASS en lugar de ID
 Class = Aplicar estilos
 Id = Aplicar funcionalidad (javascript)
 
+.bloque
+.bloque__elemento
 .bloque__elemento--modificador
+
+1. No usar ID
+2. No usar etiquetas
+3. Que todo sea un key selector (seleccionar elementos a los que se les aplicara estilos)
 */
+
+h1 {
+    text-align: center;
+}
+
+.cards {
+    width: 400px;
+    margin: 10px auto;
+    padding: 10px;
+    border: 1px solid gray;
+    box-shadow: 0px 0px 20px gray;
+    border-radius: 5px;
+}
+
+.cards__card {
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px;
+    margin: 5px;
+    background-color: lightskyblue;
+}
+
+.card__title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.card__link {
+    padding: 10px;
+    background: green;
+    color: white;
+    text-decoration: none;
+}
+
+.card__link--rojo {
+    background-color: red;
+}
